# gamejam-gameoff2023

./: CMakeLists.txt
gamejam-gameoff2023/: CMakeLists.txt  gamejam-gameoff2023.c
gamejam-gameoff2023/core/: clock.c  clock.h  core.c  core.h
gamejam-gameoff2023/core/maths/: maths.h  vector2.c  vector2.h
gamejam-gameoff2023/game/: globals.h  player.c  player.h  view.c  view.h  world.c  world.h
